demo/policies/cilium/allow-ingress-httpbin.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress
  namespace: httpbin
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            istio: ingressgateway
            io.kubernetes.pod.namespace: istio-ingress
    - fromEndpoints:
        - matchLabels:
            app: istiod
            io.kubernetes.pod.namespace: istio-system
  egress:
    - toEntities:
        - cluster
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
